# pendo

./: .coveragerc  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: publish.yaml  test.yaml
pendo/: __init__.py  auth.py  const.py  exc.py  main.py  test.json  types.py
scripts/: format.sh  lint.sh  test.sh
tests/: conftest.py  test_main.py  test_version.py
